2013-06-01  Sancho Lerena <slerena@artica.es>

	* include/styles/pandora.css: Set white (#fff) as new default page background

	* pandoradb_data.sql: by default don't use flash charts.

2013-05-31  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	include/styles/menu.css
	include/styles/pandora.css
	operation/agentes/tactical.php
	operation/events/events_list.php
	images/pandora.ico.gif
	images/pandora_header_logo_enterprise.png
	images/snmp.png
	images/pandora_header_logo.png
	images/pandora.ico
	general/logon_ok.php
	general/header.php: First group of visual 
	improvements for Pandora FMS 4.1

2013-05-31 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/functions_pchart.php: avoid to characters and
	other shit that corrupts the image file.

2013-05-30 Miguel de Dios <miguel.dedios@artica.es>

	* operation/agentes/networkmap.php: fixed the string of button to
	refresh the networkmap.
	
	Fixes: #2254
	
	MERGED FROM THE TRUNK

2013-05-30 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_plugin.php: fixed the show
	ever the default IP agent when edit a module with empty ip.
	
	Fixes: #2249

2013-05-29  Dario Rodriguez <dario@artica.es>

	* pandoradb_data.sql: Added new network_components.

2013-05-29  Dario Rodriguez <dario@artica.es>

	* pandoradb_data.sql: Fixed an error on plugin's name.

2013-05-29  Dario Rodriguez <dario@artica.es>

	* pandoradb_data.sql: Added new plugins on instalation.

2013-05-29  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php: Change TTL of the graph items
	in visual console from 2 to 1 to avoid create infinite files in
	/tmp. TTL=2 is only for PDF renderization

2013-05-28 Miguel de Dios <miguel.dedios@artica.es>

	* include/config_process.php: set the timezone in init values for
	PHP because for example it is used in the library for report PDF.

2013-05-27 Miguel de Dios <miguel.dedios@artica.es>
